--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -4,10 +4,32 @@ body {
 }
 
 .app-title {
-    text-align : center;
-    font-weight: 500;
+    text-align  : center;
+    font-weight : 500;
 }
 
 .chess {
+    $squareSize : 50px;
 
+    margin-top: 70px;
+
+    .board {
+        .line {
+            display         : flex;
+            justify-content : center;
+
+            .square {
+                width  : $squareSize;
+                height : $squareSize;
+
+                &.white {
+                    background-color : #FFF;
+                }
+
+                &.black {
+                    background-color : #000;
+                }
+            }
+        }
+    }
 }
