Action cursor on pieces

--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -34,7 +34,7 @@ body {
                 }
 
                 .piece {
-                    // TODO
+                    cursor : pointer;
                 }
             }
         }
