Selected a piece on the chessboard

--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -33,6 +33,10 @@ body {
                     background-color : #5b5e84;
                 }
 
+                &.selected {
+                    background-color : #d28a83;
+                }
+
                 .piece {
                     cursor : pointer;
                 }
