--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -11,7 +11,8 @@ body {
 .chess {
     $squareSize : 50px;
 
-    margin-top : 70px;
+    margin-top  : 70px;
+    user-select : none;
 
     .board {
         .line {
@@ -40,6 +41,20 @@ body {
                 .piece {
                     cursor : pointer;
                 }
+            }
+        }
+
+        .who-plays {
+            margin-top : 20px;
+            text-align : center;
+            font-size  : 20px;
+
+            &.white {
+                color : #FFF;
+            }
+
+            &.black {
+                color : #000;
             }
         }
     }
