Validate knight moves

--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -35,7 +35,7 @@ body {
                 }
 
                 &.selected {
-                    background-color : #d28a83;
+                    background-color : #87c17f;
                 }
 
                 .piece {
