Prepare the check square color

--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -38,6 +38,10 @@ body {
                     background-color : #87c17f;
                 }
 
+                &.check {
+                    background-color : #87c17f;
+                }
+
                 .piece {
                     cursor : pointer;
                 }
