Indicate when a king is on check

--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -34,11 +34,11 @@ body {
                     background-color : #5b5e84;
                 }
 
-                &.selected {
-                    background-color : #87c17f;
+                &.check {
+                    background-color : #d28a83;
                 }
 
-                &.check {
+                &.selected {
                     background-color : #87c17f;
                 }
 
