Force the player to defend the check

--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -60,6 +60,10 @@ body {
             &.black {
                 color : #000;
             }
+
+            .check {
+                color : #bd1100;
+            }
         }
     }
 }
