--- a/src/scss/chess.scss
+++ b/src/scss/chess.scss
@@ -1,6 +1,7 @@
 body {
     background-color : dimgrey;
     color            : white;
+    overflow         : hidden;
 }
 
 .app-title {
@@ -15,38 +16,56 @@ body {
     user-select : none;
 
     .board {
-        .line {
-            display         : flex;
-            justify-content : center;
 
-            .square {
+        .line-container {
+            transition : transform 500ms;
+
+            &.black {
+                transform : rotate(180deg);
+
+                .line {
+                    .square {
+                        img {
+                            transform : rotate(180deg);
+                        }
+                    }
+                }
+            }
+
+            .line {
                 display         : flex;
-                align-items     : center;
                 justify-content : center;
-                width           : $squareSize;
-                height          : $squareSize;
 
-                &.white {
-                    background-color : #FFF;
-                }
+                .square {
+                    display         : flex;
+                    align-items     : center;
+                    justify-content : center;
+                    width           : $squareSize;
+                    height          : $squareSize;
 
-                &.black {
-                    background-color : #5b5e84;
-                }
+                    &.white {
+                        background-color : #FFF;
+                    }
 
-                &.check {
-                    background-color : #d28a83;
-                }
+                    &.black {
+                        background-color : #5b5e84;
+                    }
 
-                &.selected {
-                    background-color : #87c17f;
-                }
+                    &.check {
+                        background-color : #d28a83;
+                    }
 
-                .piece {
-                    cursor : pointer;
+                    &.selected {
+                        background-color : #87c17f;
+                    }
+
+                    .piece {
+                        cursor : pointer;
+                    }
                 }
             }
         }
+
 
         .who-plays {
             margin-top : 20px;
@@ -71,15 +90,15 @@ body {
                 margin-top      : 10px;
 
                 .piece {
-                    cursor     : pointer;
+                    cursor : pointer;
 
                     &:not(:first-child) {
                         margin-left : 10px;
                     }
 
                     img {
-                        border-radius: 5px;
-                        transition : background-color 200ms;
+                        border-radius : 5px;
+                        transition    : background-color 200ms;
                     }
 
                     &:hover {
